# video_audio_encoding

commandLine/: readme.md
video_decoding_frame_by_frame/: CMakeLists.txt  main.cpp
webrtc_server/: CMakeLists.txt  client.html  main.cpp
webrtc_server/utility/: webrtcObserver.hpp  websocket_server.cpp  websocket_server.hpp
